<resources>
    <string name="app_name">Eshopie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot password??</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_id">Email id</string>
    <string name="full_name">Full Name</string>
    <string name="password">password</string>
    <string name="already_have_an_account">Already have an account??</string>
    <string name="forgot_msg">Don\'t worry, we just need your registered email</string>
    <string name="forgot_editText_msg">Provide your registered email</string>
    <string name="forgot_goBack"><![CDATA[< < Go back]]></string>
    <string name="forgot_msg2">Recovery email sent successfully! Please check your inbox.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search">search</string>
    <string name="notification">notification</string>
    <string name="cart">cart</string>
    <string name="not_signed_in">Not signed in</string>
    <string name="email_address">Email Address</string>
    <string name="orders">orders</string>
    <string name="rewards">rewards</string>
    <string name="wishlist">Wishlist</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="home_appliances">Home Appliances</string>
    <string name="deals_of_the_day">Deals of the day</string>
    <string name="view_all">View ALl >></string>
    <string name="title_activity_home2">HomeActivity2</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
</resources>