<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_search_icon"
        android:orderInCategory="100"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/home_notification_icon"
        android:orderInCategory="100"
        android:icon="@drawable/notification"
        android:title="@string/notification"
        app:showAsAction="always" />
    <item
        android:id="@+id/home_cart_icon"
        android:orderInCategory="100"
        android:icon="@drawable/cart"
        android:title="@string/cart"
        app:showAsAction="always" />
</menu>