<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPassword">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="28sp"
            android:textColor="@color/purple_500"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_msg"
            android:layout_marginTop="30dp"
            android:textColor="@color/teal_200"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/forgot_password_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:ems="10"
            android:hint="@string/forgot_editText_msg"
            android:inputType="textEmailAddress"
            android:theme="@style/Theme.RedProgress"
            android:minHeight="48dp"
            android:textColor="@color/purple_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/reset_password_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="16dp"
            android:enabled="false"
            android:text="Reset Password"
            android:textAllCaps="false"
            android:textColor="#70ffffff"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_email" />

        <TextView
            android:id="@+id/forgot_password_go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/forgot_goBack"
            android:textColor="@color/purple_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reset_password_button" />

        <LinearLayout
            android:id="@+id/forgot_password_email_icon_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/reset_password_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_email">

            <ImageView
                android:id="@+id/forgot_password_email_icon"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:src="@drawable/mail_red"
                android:visibility="gone" />

            <TextView
                android:id="@+id/forgot_password_email_icon_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/forgot_msg2"
                android:textColor="@color/green"
                android:visibility="gone" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/forgot_password_progress_bar"
            android:visibility="gone"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:theme="@style/Theme.RedProgress"
            app:layout_constraintBottom_toTopOf="@+id/reset_password_button"
            app:layout_constraintEnd_toEndOf="@+id/forgot_password_email_icon_container"
            app:layout_constraintStart_toStartOf="@+id/forgot_password_email_icon_container"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_email_icon_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>